// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "hə giːŋ hiːz hə wulh",
    },
    {
      "english": "the dogs see the wolves",
      "target": "hə bɔgs hiː hə wulhs",
    },
    {
      "english": "i give you the bread",
      "target": "aw giːh dʒu",
    },
    {
      "english": "the king walks at the river",
      "target": "hə giːŋ wɔgz ad hə biːhəb",
    },
    {
      "english": "the king does not see the wolf",
      "target": "hə giːŋ naθ hiːz hə wulh",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "rāgā vābārāt buːpuːom",
    },
    {
      "english": "the dogs see the wolves",
      "target": "gānāe vābārānt buːpuːeom",
    },
    {
      "english": "i give you the bread",
      "target": "æko bārāo buːom",
    },
    {
      "english": "the king walks at the river",
      "target": "rāgā ābəbuːbārāt fbuːbā",
    },
    {
      "english": "the king does not see the wolf",
      "target": "rāgā nō vābārāt buːpuːom",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "føwe luhel fuwøle",
    },
    {
      "english": "the dogs see the wolves",
      "target": "fuwøle luhel fuwøle",
    },
    {
      "english": "i give you the bread",
      "target": "le kaːlaː helaː",
    },
    {
      "english": "the king walks at the river",
      "target": "føwe haːwaː saːhe hølu",
    },
    {
      "english": "the king does not see the wolf",
      "target": "føwe aːlaː luhel fuwøle",
    },
  ],
  "preset": "tokipona",
}
`;
